fixed saved tab article spacing offset

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,7 +21,7 @@
 }
 
 .glyphicon {
-	color: black;
+	color: grey;
 	margin-right: 2%;
 	font-size: 20px;
 }
